--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,13 @@ buildscript {
     repositories {
         google()
         jcenter()
+
+        maven {
+            url "https://raw.githubusercontent.com/Snap-Kit/release-maven/repo"
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0'
+        classpath 'com.android.tools.build:gradle:3.4.2'
         
 
         // NOTE: Do not place your application dependencies here; they belong
