--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data android:name="com.snapchat.kit.sdk.clientId" android:value="10ead888-f91e-41a0-be9d-87b280568792" />
+        <meta-data android:name="com.snapchat.kit.sdk.redirectUrl" android:value="ratemovies://snap-kit/oauth2" />
+        <meta-data android:name="com.snapchat.kit.sdk.scopes" android:resource="@array/snap_connect_scopes" />
+
         <activity android:name=".MainView">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -54,6 +59,25 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="me.holz.ratemovies.MainView" />
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <!--
+                    Enter the parts of your redirect url below
+                    e.g., if your redirect url is myapp://snap-kit/oauth2
+                        android:scheme="myapp"
+                        android:host="snap-kit"
+                        android:path="oauth2"
+                !-->
+                <data
+                    android:scheme="ratemovies"
+                    android:host="snap-kit"
+                    android:path="/oauth2"
+                    />
+            </intent-filter>
+
         </activity>
         <activity
             android:name=".RegisterActivity"
